--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,7 +2,7 @@
   "name": "@pingy/cli",
   "version": "0.12.3",
   "description": "The Simple Frontend Build Tool. No Configuration, No Plugins. ",
-  "main": "index.js",
+  "main": "cli.js",
   "keywords": [
     "frontend",
     "html",
