--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "install": "lerna bootstrap"
   },
   "devDependencies": {
-    "eslint": "^4.11.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-mocha": "^4.11.0",
-    "lerna": "^2.7.1"
+    "lerna": "^2.11.0"
   },
-  "workspaces": ["packages/*"]
+  "workspaces": [
+    "packages/*"
+  ]
 }
